--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,2 @@
 sources:
-  "maven-shade-plugin-1.4.tar.xz:"	168ada0aa4b9c585044d430f0c3ecaec7580f3fc
-  "maven-shade-plugin.depmap:"	085b5ea0b87769b58a345bd26c3536f2e51c6bb1
+  maven-shade-plugin-2.1-source-release.zip: fb3328ff0de82e2f5ab3d2a1c1d51480054bc9cc
