--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   maven-shade-plugin-2.1-source-release.zip: fb3328ff0de82e2f5ab3d2a1c1d51480054bc9cc
+  maven-shade-plugin-2.3-source-release.zip: 3e3daae952a0413d54aff4b8d6c1e0e2834f8f4d
